--- a/package.json
+++ b/package.json
@@ -9,13 +9,50 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/mapbox-gl": "^2.7.11",
     "autoprefixer": "10.4.14",
+    "dompurify": "^3.0.3",
+    "draft-convert": "^2.1.13",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "firebase": "^9.22.1",
+    "framer-motion": "^10.12.16",
+    "html-to-draftjs": "^1.5.0",
+    "install": "^0.13.0",
+    "mapbox-gl": "^2.15.0",
+    "moment": "^2.29.4",
+    "mongodb": "^5.6.0",
+    "mongoose": "7.2.2",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
+    "nodemailer": "^6.9.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-hooks-global-state": "^2.1.0",
+    "react-image-file-resizer": "^0.4.8",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-redux": "^8.0.7",
+    "react-router": "^6.12.0",
+    "react-swipeable": "^7.0.1",
+    "react-use-keypress": "^1.3.1",
+    "redux-persist": "^6.0.0",
+    "sharp": "^0.32.1",
+    "swiper": "^9.3.2",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.8",
+    "typescript": "5.1.3"
   }
 }
